--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "connect-flash": "^0.1.1",
     "ejs": "^2.7.1",
     "express": "^4.17.1",
+    "express-sanitizer": "^1.0.5",
     "express-session": "^1.16.2",
     "method-override": "^3.0.0",
     "moment": "^2.24.0",
